--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,14 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.thymeleaf.extras/thymeleaf-extras-springsecurity5 -->
+		<dependency>
+    		<groupId>org.thymeleaf.extras</groupId>
+   			<artifactId>thymeleaf-extras-springsecurity5</artifactId>
+   			<version>3.0.4.RELEASE</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
