--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,19 @@
-# MYSQL
-spring.datasource.url= jdbc:mysql://localhost:3306/demo_security?useTimezone=true&serverTimezone=America/Sao_Paulo&useSSL=false
+# MYSQL URL de conexão com o banco de dados
+# Lista de TimeZone: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+spring.datasource.url= jdbc:mysql://localhost:3306/demo_security?useTimezone=true&serverTimezone=America/Belem&useSSL=false
 spring.datasource.username= root
 spring.datasource.password= root
 
 #JPA
+#hibernate.ddl-auto= none impede que o Hibernate crie o banco de dados ou os modifique. Nesse projeto o banco será criado via script com a ferramenta Workbench
 spring.jpa.hibernate.ddl-auto= none
 spring.jpa.show-sql= true
+
+#jpa.open-in-view= true propriedade do Spring que evita Exceções do tipo Lazy em relacionamentos entre entidades
 spring.jpa.open-in-view= true
 
 # THYMELEAF
+# false é o padrão utilizado em ambientes de desenvolvimento.
 spring.thymeleaf.cache= false
 
 server.port=8090
