configurações inciais do email

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,12 @@ spring.jpa.open-in-view= true
 spring.thymeleaf.cache= false
 
 server.port=8090
+
+#JAVAMAIL configurações para a conexão com o servidor de email. Envio via SMTP
+spring.mail.host= smtp.yandex.com
+spring.mail.port= 587
+spring.mail.username= jhon.len0n@yandex.com
+spring.mail.password= 3gTkwPw1
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.starttls.enable = true
+spring.mail.test-connection=true
