--- a/pom.xml
+++ b/pom.xml
@@ -75,14 +75,20 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
-		
+
+		<!--Dependencia para servicos de email  -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/org.thymeleaf.extras/thymeleaf-extras-springsecurity5 -->
 		<dependency>
-    		<groupId>org.thymeleaf.extras</groupId>
-   			<artifactId>thymeleaf-extras-springsecurity5</artifactId>
-   			<version>3.0.4.RELEASE</version>
+			<groupId>org.thymeleaf.extras</groupId>
+			<artifactId>thymeleaf-extras-springsecurity5</artifactId>
+			<version>3.0.4.RELEASE</version>
 		</dependency>
-		
+
 	</dependencies>
 
 	<build>
