configuracoes iniciais de servicos de email

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,10 +19,19 @@ spring.thymeleaf.cache= false
 server.port=8090
 
 #JAVAMAIL configurações para a conexão com o servidor de email. Envio via SMTP
-spring.mail.host= smtp.yandex.com
-spring.mail.port= 587
-spring.mail.username= jhon.len0n@yandex.com
-spring.mail.password= 3gTkwPw1
-spring.mail.properties.mail.smtp.auth = true
-spring.mail.properties.mail.starttls.enable = true
-spring.mail.test-connection=true
+# configurar a porta e host de acordo com o provedor. Em password, usar a "Senhas de app" configurada na conta google
+spring.mail.host= smtp.gmail.com
+spring.mail.port= 465
+spring.mail.username= filipe.couto.10@gmail.com
+spring.mail.password= 
+spring.mail.protocol=smtps
+spring.mail.properties.mail.smtp.auth=true
+
+spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.smtp.socketFactory.fallback = false
+spring.mail.properties.mail.smtp.starttls.enable = true
+spring.mail.properties.mail.smtp.ssl.enable = true
+
+
+
+
